# wal-lsp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  test_demo.wal  test_lsp.sh
docs/wal-lang/: arrays.md  core.md  groups.md  index.md  lists.md  signals.md  types.md  waveforms.md
editors/emacs/: wal-lsp.el
editors/opencode/: lsp.json  mcp.json
editors/vim/: wal.lua
editors/vscode/: extensions.json  settings.json
src/: config.rs  main.rs
src/lsp/: document.rs  mod.rs
src/lsp/handlers/: code_action.rs  completion.rs  completion_resolve.rs  config.rs  diagnostics.rs  folding_range.rs  formatting.rs  goto.rs  highlight.rs  hover.rs  mod.rs  references.rs  signature_help.rs  symbols.rs  workspace_symbol.rs
src/mcp/: mod.rs  tools.rs
src/wal/: completions.rs  docs.rs  format.rs  fst_reader.rs  mod.rs  parser.rs  symbols.rs  waveform.rs
src/wal/rules/: arity.rs  mod.rs  structure.rs  unknown_symbol.rs
src/workspace/: mod.rs  waveform.rs
tests/: lsp_handshake.rs
tests/syntax/: 01_arithmetic.wal  02_logic.wal  03_state.wal  04_functions.wal  05_control_flow.wal  06_printing.wal  07_utility.wal  08_lists.wal  09_arrays.wal  10_types.wal  11_quoting.wal  12_numbers.wal  13_scoped_symbols.wal  14_literals.wal  15_comments.wal  16_diagnostics.wal  17_integration.wal  18_waveform_ops.wal  19_signal_access.wal  20_groups_scopes.wal
tree-sitter-wal/: Cargo.toml  Makefile  Package.swift  binding.gyp  build.rs  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-wal/src/: bindings.rs  grammar.json  lib.rs  node-types.json  parser.c
(+10 files in other folders)
