[package]
name = "wal-lsp"
version = "0.6.1"
edition = "2021"
authors = ["He Sheng && Deepseek"]
description = "Language Server Protocol implementation for WAL (Waveform Analysis Language)"
license = "BSD-3-Clause"
repository = "https://github.com/hesheng/WAL-lsp"
keywords = ["lsp", "wal", "waveform", "hardware"]
categories = ["development-tools"]

[dependencies]
# LSP
lsp-server = "0.7"
lsp-types = "0.96"

# Tree-sitter
tree-sitter = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
regex = "1"

# FST decompression
lz4_flex = "0.11"
flate2 = "1.0"
once_cell = "1"
downcast = "0.11"
clap = { version = "4", features = ["derive"] }

# WAL parser (local)
tree-sitter-wal = { path = "tree-sitter-wal" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wal-lsp"
path = "src/main.rs"
